[package]
name = "phage"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
arboard = "3"
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1"
futures-lite = "2"
iroh = "0.97"
iroh-gossip = "0.97"
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }